<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSkipIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_skip_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spaceSkipIntro"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_large"
        app:layout_constraintTop_toBottomOf="@+id/buttonSkipIntro" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonStart"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_back"
        android:textColor="@color/dark_grey"
        app:icon="@drawable/ic_left"
        app:iconTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceSkipIntro" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabOnboardingItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEnd"
        app:layout_constraintStart_toEndOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/spaceSkipIntro"
        app:tabBackground="@drawable/indicator"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEnd"
        app:layout_constraintStart_toEndOf="@+id/buttonStart"
        app:layout_constraintTop_toBottomOf="@+id/spaceSkipIntro"
        app:tabBackground="@drawable/indicator"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        tools:visibility="visible">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEnd"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_next"
        android:textColor="@color/dark_grey"
        app:icon="@drawable/ic_right"
        app:iconGravity="end"
        app:iconTint="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceSkipIntro" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupSkipIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="spaceSkipIntro,buttonSkipIntro" />

</androidx.constraintlayout.widget.ConstraintLayout>